--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
                     <small>Margins, fonts, spacing, and print settings</small>
                 </div>
 
+                <!-- Characters Per Page (fallback for compatibility) -->
+                <div class="setting-group">
+                    <h3>🔤 Characters Per Page</h3>
+                    <input type="number" id="charactersPerPage" class="form-control" value="1800" min="1000" max="3000" step="100">
+                    <small>Adjust based on target age group (1000-1500 for younger kids, 1800-2500 for older)</small>
+                </div>
+
                 <!-- Illustration Frequency -->
                 <div class="setting-group">
                     <h3>🎨 Illustration Frequency</h3>
