--- a/index.html
+++ b/index.html
@@ -266,11 +266,17 @@
         </div>
     </div>
 
-    <!-- Load JavaScript Files -->
-    <script src="core.js"></script>
-    <script src="project-manager.js"></script>
-    <script src="page-layout.js"></script>
-    <script src="app.js"></script>
+<!-- Load JavaScript Files - Modular App System -->
+<script src="core.js"></script>
+<script src="project-manager.js"></script>
+<script src="page-layout.js"></script>
+<!-- New modular app files (replace app.js) -->
+<script src="app-core.js"></script>
+<script src="app-undo.js"></script>
+<script src="app-flow.js"></script>
+<script src="app-actions.js"></script>
+<script src="app-export.js"></script>
+<script src="app-main.js"></script>
     
     <!-- GitHub Pages Analytics (Optional) -->
     <script>
